force-app/main/default/objects/Sms_Url__c/Sms_Url__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configurations to activate sms function.</description>
    <label>SMS Url</label>
</CustomObject>