force-app/main/default/objects/Sms_Url__c/fields/Activate_sms_function__c.field-meta.xml
<CustomField>
    <fullName>Activate_sms_function__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate sms function</label>
    <type>Checkbox</type>
</CustomField>