force-app/main/default/objects/Sms_Url__c/fields/Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>Sender_Id__c</fullName>
    <label>Sender Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>