force-app/main/default/objects/Sms_Url__c/fields/Sms_Text__c.field-meta.xml
<CustomField>
    <fullName>Sms_Text__c</fullName>
    <label>Sms Text</label>
    <type>TextArea</type>
</CustomField>